@@ -76,6 +76,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertNull
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|fail
 import|;
 end_import
@@ -6883,6 +6895,53 @@ argument_list|(
 name|f1
 argument_list|,
 literal|null
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testClearBlocks ()
+specifier|public
+name|void
+name|testClearBlocks
+parameter_list|()
+block|{
+name|INodeFile
+name|toBeCleared
+init|=
+name|createINodeFiles
+argument_list|(
+literal|1
+argument_list|,
+literal|"toBeCleared"
+argument_list|)
+index|[
+literal|0
+index|]
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|toBeCleared
+operator|.
+name|getBlocks
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|toBeCleared
+operator|.
+name|clearBlocks
+argument_list|()
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|toBeCleared
+operator|.
+name|getBlocks
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
