@@ -713,6 +713,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8726. Move protobuf files that define the client-sever protocols to
     hdfs-client. (wheat9)
 
+    HDFS-8751. Remove setBlocks API from INodeFile and misc code cleanup. (Zhe
+    Zhang via jing9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
